--- a/plugin/CloneSite/pluginMenu.html
+++ b/plugin/CloneSite/pluginMenu.html
@@ -4,7 +4,7 @@
         $('#cloneProgressModal').modal();
         function getClientLog(){
             $.ajax({
-                url: webSiteRootURL+'videos/cache/clones/client.log'
+                url: webSiteRootURL+'plugin/CloneSite/client.log.php'
             }).done(function (resp) {
                 $('#cloneLog').text(resp);
                 var $target = $('#cloneLog');
