--- a/plugin/UserNotifications/template.html
+++ b/plugin/UserNotifications/template.html
@@ -1,4 +1,4 @@
-<div class="{element_class} {type}" id="{element_id}">
+<div class="userNotifications {element_class} {type}" id="{element_id}">
     <a href="{href}" onclick="{onclick}" class="list-group-item {status}">
         <div class="media">
             <div class="media-left">
