https://github.com/WWBN/AVideo/issues/7161

--- a/plugin/PlayLists/listGroupItemTemplate.html
+++ b/plugin/PlayLists/listGroupItemTemplate.html
@@ -9,7 +9,7 @@
     </button>
     <span>
         <i class="{icon}"></i>  
-        {name_translated}
+        <span class="nameSearch">{name_translated}</span>
     </span>
     <div class="material-switch material-small pull-right">
         <input id="someSwitchOptionDefault{randId}" name="someSwitchOption{response_id}" 
