--- a/plugin/StripeYPT/pluginMenu.html
+++ b/plugin/StripeYPT/pluginMenu.html
@@ -1,1 +1,12 @@
-<button onclick="avideoModalIframe(webSiteRootURL +'plugin/StripeYPT/listSubscriptions.php');" class="btn btn-primary btn-sm btn-xs btn-block"><i class="far fa-list-alt"></i> List Subscriptions</button>
+<button 
+    onclick="avideoModalIframe(webSiteRootURL +'plugin/StripeYPT/listSubscriptions.php');" 
+    class="btn btn-primary btn-sm btn-xs btn-block">
+    <i class="far fa-list-alt"></i> 
+    List Subscriptions
+</button>
+<button 
+    onclick="avideoAlertAJAX(webSiteRootURL +'plugin/StripeYPT/createWebhook.json.php');" 
+    class="btn btn-primary btn-sm btn-xs btn-block">
+    <i class="fas fa-bookmark"></i> 
+    Check Webhook
+</button>
